fix: prevent videos overflowing on blackboard

--- a/_online.manchester.ac.uk.scss
+++ b/_online.manchester.ac.uk.scss
@@ -277,6 +277,7 @@ img[src="#{$orig_file_icon}"] {
 
 iframe[src*="https://video.manchester.ac.uk"] {
 	border-radius: 0.5rem;
+	width: 100%;
 	height: auto;
 	aspect-ratio: 660 / 362;
 }
